c1/qsearch
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/qsearch/src/search.c:945:12: error: expected expression
*( _OWORD *)&pv[0][v19 / 3 + v20 / 0x18].from = *( _OWORD *)&v41[v15].from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/qsearch/src/search.c:945:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pv[0][v19 / 3 + v20 / 0x18].from = *( _OWORD *)&v41[v15].from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/qsearch/src/search.c:945:60: error: expected expression
*( _OWORD *)&pv[0][v19 / 3 + v20 / 0x18].from = *( _OWORD *)&v41[v15].from; 
                                                           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/qsearch/src/search.c:945:52: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pv[0][v19 / 3 + v20 / 0x18].from = *( _OWORD *)&v41[v15].from; 
                                                   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/qsearch/src/search.c:957:12: error: expected expression
*( _OWORD *)( ( char *)&( *v25)[0].from + v23) = *( _OWORD *)&( *v25)[v24].from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/qsearch/src/search.c:957:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&( *v25)[0].from + v23) = *( _OWORD *)&( *v25)[v24].from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/qsearch/src/search.c:957:61: error: expected expression
*( _OWORD *)( ( char *)&( *v25)[0].from + v23) = *( _OWORD *)&( *v25)[v24].from; 
                                                            ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/qsearch/src/search.c:957:53: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&( *v25)[0].from + v23) = *( _OWORD *)&( *v25)[v24].from; 
                                                    ^
8 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/qsearch/src/obj/search.o] Error 1
